# dp-rag

./: .gitignore  CITATION.cff  Makefile  README copy.md  README.md  data.py  dp_model.py  dp_rag_engine.py  evaluation.py  model.py  pup_vector_store.py  pyproject.toml  quick_test_dp_rag.py  requirements.txt  test_data.py  test_dp_rag.py  visualization.ipynb  visualization.py  visualization_v2.ipynb
cache/: disease_probabilities.json  diseases.json  patient_diseases.json  patient_requests.json  patients.json  symptoms.json  treatments.json
documents/: Makefile  references.bib  report.md
documents/IEEE CAI/: report.aux  report.fdb_latexmk  report.fls  report.out  report.tex
documents/IEEE CAIi/: report.aux  report.fdb_latexmk  report.fls  report.tex
documents/arxiv/: report.aux  report.fdb_latexmk  report.fls  report.tex
documents/cai/: report.aux  report.fdb_latexmk  report.fls  report.out  report.tex
documents/figures/: exp_mech.py
dpsparse_vote/: README.md  dp_sparse_vote_rag.py  dp_sparse_vote_rag_engine.py  load_dataset.py  real_generator.py  real_retriever.py  test_dp_sparse_vote_rag.py  test_dp_sparse_vote_rag_full.py  toy_models.py
quick_test_results/: quick_evaluation.json
results/: evaluation.json  evaluation_eps_0.001.json  evaluation_eps_0.008.json  evaluation_eps_0.028.json  evaluation_eps_0.098.json  evaluation_eps_0.248.json  evaluation_eps_0.5.json  evaluation_eps_1.0.json  evaluation_eps_10.0.json  evaluation_eps_2.0.json  evaluation_eps_5.0.json  evaluation_eps_5.299.json  evaluation_eps_9.999.json
results/old_results/: evaluation.json  (+1 more)
(+8 files in other folders)
