[project]
name = "pyserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "accelerate~=1.0",
    "numpy~=1.21",
    "torch~=2.4.0",
    "huggingface_hub~=0.26",
    "transformers~=4.0",
    "protobuf>=5.28.3",
    "sentencepiece>=0.2.0",
    "faker>=30.8.2",
    "bitsandbytes>=0.44.1",
    "datasets>=3.1.0",
    "termcolor>=2.5.0",
    "dp-accounting>=0.4.4",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
]
